# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-12-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add additional syslog logging configuration options

2016-12-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the syslog_socket pure Erlang syslog interface
    * Remove the cloudi_x_syslog port driver
      (cloudi_core now has no internal NIF usage or internal port driver usage
       which helps to ensure reliable operation in any environment)
    * Fix bug with attempting to use syslog severity 8 with cloudi_x_syslog
      though this changes the syslog severity level mapping with
      CloudI log levels
    * CloudI now uses standard syslog facility values from syslog_socket
      (strictly based on RFC3164 and RFC5424) instead of the custom
      facility values defined by cloudi_x_syslog

2016-12-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove CloudI Erlang/OTP version macro checks for before 19.x
      to remove the cloudi_core_i_socket NIF and accumulated preprocessor checks
      (cloudi_core now has no internal NIF usage,
       the only internal port driver usage is through
       cloudi_x_syslog when syslog usage is enabled)
    * Add linear options to the restart_delay service configuration option

2016-12-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CloudILogger Elixir module to the cloudi_core Erlang application
    * Fix CloudILogger Elixir usage of function/arity data
    * Update the Elixir.HelloWorld1 example based on the changes
    * Update reltool_util

2016-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Require Erlang/OTP 19.x or higher
    * Switch to always logging the function name and arity due to EEP45
      included in Erlang/OTP 19.x
    * Update reltool_util
    * Fix old rebar2 package compile issue

2016-12-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the name of the service configuration option