@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2017-01-05 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Update supool
+
 2016-12-27 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add additional syslog logging configuration options
